Combination of Dubugging Properties, Copy Property Actuator, and Property Interval Sensor causes memory leak #36804

Closed
opened 2013-09-24 00:57:16 +02:00 by mobious · 7 comments

Category: Logic

%%%Apparently there are some bizarre interactions going on between a property sensor set to interval mode, a property actuator set to copy mode, having the Debug Properties option enabled, and having debug information enabled on the property you're copying to. Note that the property actuator must be set to copy mode, and the property sensor mush be in interval mode. Changing either causes the bug to disappear.

My best guess as to why this is happening is that the debugging info system is creating a new tracker for the property you are copying to each time the copy property actuator gets activated (though I have no idea how the property interval sensor comes into this). It'll take some digging in the source code to figure out exactly what causes the issue.

I've attached the simplest blend I could create with the issue. Notice that Blender's memory usage steadily increases while the game engine is running.%%%

**Category**: Logic %%%Apparently there are some bizarre interactions going on between a property sensor set to interval mode, a property actuator set to copy mode, having the Debug Properties option enabled, and having debug information enabled on the property you're copying to. Note that the property actuator must be set to copy mode, and the property sensor mush be in interval mode. Changing either causes the bug to disappear. My best guess as to why this is happening is that the debugging info system is creating a new tracker for the property you are copying to each time the copy property actuator gets activated (though I have no idea how the property interval sensor comes into this). It'll take some digging in the source code to figure out exactly what causes the issue. I've attached the simplest blend I could create with the issue. Notice that Blender's memory usage steadily increases while the game engine is running.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%I also noticed that the same issue occurs when there is an additional property sensor set to any mode beside interval. weird_memory2.blend demonstrates this.%%%

%%%I also noticed that the same issue occurs when there is an additional property sensor set to any mode beside interval. weird_memory2.blend demonstrates this.%%%
Author

%%%*Submitted the second file%%%

%%%*Submitted the second file%%%

This issue was referenced by blender/blender-addons-contrib@8aff45d8f6

This issue was referenced by blender/blender-addons-contrib@8aff45d8f671e7eb2f404c8f194e06d88c5147c9

This issue was referenced by 8aff45d8f6

This issue was referenced by 8aff45d8f671e7eb2f404c8f194e06d88c5147c9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 8aff45d8f6.

Closed by commit 8aff45d8f6.
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#36804
No description provided.